--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
-litellm
-python-dotenv
-pydantic
-pandas
-openpyxl
-streamlit-tags
-supabase
-streamlit
-streamlit-tags
-crawl4ai
+# LLM and API Integration
+litellm>=1.0.0
+python-dotenv>=0.19.0
+
+# Web Scraping and Browser Automation
+playwright>=1.30.0
+html2text>=2020.1.16
+crawl4ai>=0.1.0
+
+# Data Processing and Validation
+pydantic>=2.0.0
+pandas>=1.5.0
+openpyxl>=3.0.0
+
+# Database
+supabase>=2.0.0
+
+# Web Interface
+streamlit>=1.22.0
+streamlit-tags>=1.0.0
+
+# Async Support
+asyncio>=3.4.3
+
+# Optional Dependencies
+# Add any additional dependencies here
